--- a/app/templates/edit_map.html
+++ b/app/templates/edit_map.html
@@ -25,6 +25,7 @@
     <script src="{% static "js/app.js" %}"></script>
     <script src="{% static "js/bootstrap.js" %}"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQpdKHgY0iS3w9nTE6F5625LwZi2zBFY0&v=3.exp"></script>
+    <script src="{% static "js/markerwithlabel.js" %}"></script>
 
     <link href="{% static "css/jquery-ui.css" %}" rel="stylesheet" type="text/css"/>
     <link href="{% static "css/jquery-ui.structure.css" %}" rel="stylesheet" type="text/css"/>
