--- a/app/templates/edit_map.html
+++ b/app/templates/edit_map.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}Simple icons{% endblock %}
-{% block additional_head %}]
+{% block additional_head %}
     {% load staticfiles %}
     <script src="{% static "js/markerwithlabel.js" %}"></script>
     <style type="text/css">
@@ -66,7 +66,8 @@
             </form>
         </div>
     </div>
-    <div class="context-menu-one box menu-1" style="display: none"></div>
+    <div class="context-menu-1 box menu-1" style="display: none"></div>
+    <div class="context-menu-marker box menu-marker" style="display: none"></div>
     <div id="map-canvas"></div>
     <input type="hidden" id="city-id" value="{{ id }}">
 {% endblock %}
