--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,6 +6,10 @@
     {% include "head.html" %}
     {% block additional_head %}{% endblock %}
     <style type="text/css">
+        html,body {
+            width: 100%;
+            height: 100%;
+        }
         {% block additional_styles %}{% endblock %}
     </style>
 </head>
