--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 {% block additional_head %}
 
     <style type="text/css">
@@ -10,15 +11,18 @@
         /*noinspection CssUnusedSymbol*/
         .line {
             fill: none;
-            stroke: black;
             stroke-width: 3
         }
 
         /*noinspection CssUnusedSymbol*/
         .station {
-            fill: red;
-            stroke: red;
             cursor: pointer;
+        }
+
+        #search-container {
+            position: absolute;
+            right: 2em;
+            top: 2em
         }
     </style>
     <script type="application/javascript">
@@ -34,19 +38,34 @@
                 station.x = toScreenCoordinates(station.x, svg);
                 station.y = toScreenCoordinates(1 - station.y, svg);
             });
-            svg.append(
-                    $('<polyline>').addClass('line').attr('points', stations.map(function (station) {
-                        return station.x + ',' + station.y;
-                    }).join(' '))
+            svg.append($('<polyline>')
+                            .addClass('line')
+                            .attr('style', 'stroke:' + line.color)
+                            .attr('points', stations.map(function (station) {
+                                return station.x + ',' + station.y;
+                            }).join(' '))
             );
-            stations.forEach(function (station) {
+            console.log(stations);
+            for (var i in stations) {
+                if (!stations.hasOwnProperty(i)) continue;
+                var station = stations[i];
                 var circle = $('<circle>').addClass('station').attr({
+                    style: 'stroke:' + line.color + ';fill: ' + line.color,
                     cx: station.x,
                     cy: station.y,
-                    r: 10
+                    r: 8
                 });
-                svg.append(circle)
-            });
+                svg.append(circle);
+                {#                var image = $('<image></image>').addClass('station').attr({#}
+                {#                    x: Math.ceil(station.x - 8),#}
+                {#                    y: Math.ceil(station.y - 8),#}
+                {#                    width: 15,#}
+                {#                    height: 15,#}
+                {#                    'xlink:href': '{% static "img/omich.jpg" %}'#}
+                {#                });#}
+                {#                svg.append(image);#}
+            }
+
         }
         var cityId = {{ city.id }};
         $(document).ready(function () {
@@ -68,4 +87,23 @@
 {% endblock %}
 {% block content %}
     <svg id="metro-map" xmlns="http://www.w3.org/2000/svg"></svg>
+    <div id="search-container" role="form">
+        <div class="form-group">
+            <label for="sourceStation" class="col-sm-2 control-label">Откуда</label>
+            <select id="sourceStation" class="form-control">
+                {% for station in stations %}
+                    <option value="{{ station.id }}">{{ station.name }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="destinationStation" class="col-sm-2 control-label">Куда</label>
+            <select id="destinationStation" class="form-control">
+                {% for station in stations %}
+                    <option value="{{ station.id }}">{{ station.name }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <button type="submit" class="btn btn-default">Поехали</button>
+    </div>
 {% endblock %}
