--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -168,16 +168,26 @@
         <div class="form-group">
             <label for="sourceStation" class="col-sm-2 control-label">Откуда</label>
             <select id="sourceStation" class="form-control">
-                {% for station in stations %}
-                    <option value="{{ station.id }}">{{ station.name }}</option>
+                <option selected value=""></option>
+                {% for line in city.lines.all %}
+                    <optgroup label="{{ line.name }}">
+                        {% for station in line.stations.all %}
+                            <option value="{{ station.id }}">{{ station.name }}</option>
+                        {% endfor %}
+                    </optgroup>
                 {% endfor %}
             </select>
         </div>
         <div class="form-group">
             <label for="destinationStation" class="col-sm-2 control-label">Куда</label>
             <select id="destinationStation" class="form-control">
-                {% for station in stations %}
-                    <option value="{{ station.id }}">{{ station.name }}</option>
+                <option selected value=""></option>
+                {% for line in city.lines.all %}
+                    <optgroup label="{{ line.name }}">
+                        {% for station in line.stations.all %}
+                            <option value="{{ station.id }}">{{ station.name }}</option>
+                        {% endfor %}
+                    </optgroup>
                 {% endfor %}
             </select>
         </div>
