- focus outline on station circles

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,6 +19,7 @@
         .station {
             cursor: pointer;
             position: relative;
+            outline: none;
         }
 
         #path-search-container {
