--- a/app/templates/edit_map.html
+++ b/app/templates/edit_map.html
@@ -11,10 +11,9 @@
             margin: 0;
             padding: 0
         }
-
-        .map-info-window {
-            width: 200px;
-            height: 200px;
+        ul .context-menu-item.icon {
+            display: list-item;
+            width: 95px;
         }
     </style>
 {% endblock %}
