--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,15 @@
             width: 100%;
             height: 100%;
         }
+
+        .gm-style img {
+            max-width: none;
+        }
+
+        .gm-style label {
+            width: auto;
+            display: inline;
+        }
         {% block additional_styles %}{% endblock %}
     </style>
 </head>
