--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 {#{% load json_filters %}#}
+{% block title %}Карта метро города {{ city.name }}{% endblock %}
 {% block additional_head %}
 
     <style type="text/css">
         #metro-map {
             width: 100%;
             height: 100%;
+            background-color: aliceblue
         }
 
         /*noinspection CssUnusedSymbol*/
@@ -21,10 +23,6 @@
             position: relative;
             outline: none;
             stroke-width: 2;
-        }
-
-        circle.station-active {
-            stroke: #3f9aff;
         }
 
         /*noinspection CssUnusedSymbol*/
